# live-translation

./: .gitignore  Brewfile  README.md  install-app.sh  live_translate_overlay.py  pyproject.toml  pyrightconfig.json  record_and_transcribe.py  requirements-dev.txt  requirements.lock.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
LiveTranslate.app/Contents/: Info.plist
LiveTranslate.app/Contents/MacOS/: LiveTranslate
LiveTranslate.app/Contents/Resources/: AppIcon.icns  launch.sh
LiveTranslate.app/Contents/_CodeSignature/: CodeResources
live_translation/: __init__.py  text_pipeline.py  translators.py
tests/: test_overlay_pipeline.py  test_text_pipeline.py  test_translators.py
